update model paths

--- a/dbt_nyt_mr/dbt_project.yml
+++ b/dbt_nyt_mr/dbt_project.yml
@@ -32,9 +32,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  staging:
-    +materialized: table
-  core:
-    +materialized: table
+  movie_reviews_nyt:
+    staging:
+      +materialized: table
+    core:
+      +materialized: table
 
     
